--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.8",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "expo-module-scripts": "^4.1.9",
     "react-native-svg-transformer": "^1.5.1",
     "typescript": "~5.8.3"
   },
